deploy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: metric-gw
  labels:
    app: metric-gw
