deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metric-gw
  namespace: metric-gw
  labels:
    app: metric-gw
spec:
  ports:
    - port: 9201
      targetPort: http
      name: http
  selector:
    app: metric-gw
